style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
@import url("https://cdn.jsdelivr.net/gh/ItsFoxDev/API/AvenirWebFont/import.css");
/*@media (prefers-color-scheme: light) {
  body{background: whitesmoke;}
  :root{
    --col-popout: #ededed;
    --text-col-m: #0f0f0f;
  }
}
@media (prefers-color-scheme: dark) {
  body{background: #0a0a20;}
  :root{
    --col-popout: #0f0f0f;
    --text-col-m: #ededed;
  }
} */
:root{
  --text-col-m: #ededed !important;
}
@keyframes background-pan {
  from {background-position: 0% center;}
  to {background-position: -200% center;}
}

@media only screen and (max-device-width: 480px) {
  /* Mobile */
  header div div a.mbutton{padding:10px !important;width:42px;height:42px;}
  header div div a.mbutton span{display:none !important;}
}
@media only screen and (min-device-width: 480px) {
  /* Desktop */
}


html, body {margin:unset !important;scroll-behavior:smooth}

body{
  font-family:Poppins;
  background:black; 
  color:white
}
.gradient-orange{
  animation: background-pan 3s linear infinite;
  background: linear-gradient(90deg, #ff2200, #ffa600,#ff2200);
  background-size: 200% !important;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
#main-logo{
  margin-left:2vh;
  height:7vh;
  margin-top:1.5vh;
  margin-bottom:1.5vh;
}
header{
  position:fixed;
  width:100%;
  height:10vh;
  background-color: #0000008f;  
  backdrop-filter:blur(30px);
  border-bottom: 1px rgba(255, 255, 255, 0.2) solid;
  top:0px;
  left:0px;
  right:0px;
  z-index:100;
}
#content{
  padding-top:1px
}
#creations_container h1{
  margin:0px;
  font-size: 3.25rem;
}
#creations_container{
  padding-bottom:20px;
  transform: translateY(-8px);
  background: linear-gradient(90deg, rgba(255,105,0,1) 5%, rgba(252,185,0,1) 95%);
}
.first-item{
  margin-top:11vh;
}
#mainbanner{
  margin-bottom: -26vh;
  transform:translateY(-5px);
  height: 90vh;
  align-content: center;
  display: grid;
}

#greeting{
  font-weight:700;
  font-size:3.5rem;
}
#about-me{
  font-size:1.5em;
}
.center{text-align:center;}
#title{
  text-align:center;
  margin-top:20vh;
  margin-left:10px;
  font-size:4rem;
  font-weight:700;
}

/* Credit to Hyperplexed for the buttons effect */

.link-white > i {color: rgb(230, 230, 230);}
.link-red > i {color: rgb(239, 83, 80);}
.link-yellow > i {color: rgb(240, 206, 81);}
.link-purple > i {color: #5865F2}
.link-blue > i {color: rgb(72, 100, 234);}
.link-green > i {color: #43ea46}
.link-black > i {color: #101010}
.mbutton {align-items: center;backdrop-filter: blur(3px);background-color: rgba(255, 255, 255, 0.05);border: 1px solid rgba(255, 255, 255, 0.1);border-radius: 6px;box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);cursor: pointer;  display: inline-flex;gap: 5px;padding: 10px 20px;text-decoration: none;transition: background-color 200ms, border-color 200ms;z-index: 10;}
.mbutton:hover {background-color: rgba(255, 255, 255, 0.1);border: 1px solid rgba(255, 255, 255, 0.2);}
.mbutton > i, .mbutton > span {height: 20px;line-height: 20px;}
.mbutton > span {color: white;font-family: "Poppins", sans-serif;transition: color 200ms;}
.mbutton{margin-right:5px;}
.mbutton:last-child{margin-right:unset !important}
.micon {align-items: center;backdrop-filter: blur(3px);background-color: rgba(255, 255, 255, 0.05);border: 1px solid rgba(255, 255, 255, 0.1);border-radius: 6px;box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);cursor: pointer;  display: inline-flex;gap: 5px;padding: 10px 10px;text-decoration: none;transition: background-color 200ms, border-color 200ms;z-index: 10;}
.micon:hover {background-color: rgba(255, 255, 255, 0.1);border: 1px solid rgba(255, 255, 255, 0.2);}
.micon > i{height: 20px;line-height: 20px;width: 20px;text-align: center;}
.micon{margin-right:5px;}
.micon:last-child{margin-right:unset !important;}
.thumb{
  width:150px;
  height:150px;
  border-radius:10px;
  z-index:100;
  position:relative;
}
.item{
  margin-right:15px;
  border-radius:10px;
  transition:all .4s;
  width:150px;
  height:150px;
  cursor: pointer;
  display:inline-block;
  margin-bottom:15px;
}
.item:hover{
  z-index:999;
  scale:1.1;
  transform:translateY(-20px);
  height:225px;
  margin-bottom:-75px;
}
.popout{
  padding-top:50px;
  transform:translateY(-153px);
  height:99px;
  background: transparent;
  backdrop-filter:blur(30px);
  box-shadow: 0 8px 24px rgb(0 0 0 / 60%);
  z-index:1;
  border-radius:10px;
  transition: all .4s;
}
.item:hover .popout{
  /* transform:translateY(0px); */
  height:75px; /**/
  padding-top:150px;
}
.title{
  color: var(--text-col-m);
  width: 150px;
  text-align:center;
  display:inline-block;
  font-family:'Avenir Next Demi';
}
.desc{
  color:var(--text-col-m);
  width: 150px;
  font-size:13.5px;
  text-align:center;
  display:inline-block;
  font-family:'Avenir Next Reg';
  line-height: 19px;
  max-height: 19px;
}
.icos{
  text-align:center;
  display:inline-block;
  width:150px;
  color:var(--text-col-m);
}
.icos i{
  transition:scale .4s;
  margin-right:7.5px;
}
.icos i:last-child{
  margin-right:unset !important;
}
.icos i:hover{
  scale:1.2;
}
#items{
  justify-content:center;
  display:flex;
  flex-wrap:wrap;
  width:90vw;
  margin-top:10vw;
  margin-left:5vw;
  margin-right:5vw;
  margin-bottom:10vw;
}

